<resources>
    <string name="app_name">Lokacar</string>
    <string name="home_btn_submit">Accéder à mon agence</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="list_title">Liste des véhicules</string>
    <string name="list_item_unit">€/jour</string>
    <string name="filter_loues">Véhicules loués</string>
    <string name="filter_dispo">Véhicules disponibles</string>
    <string name="action_search">Rechercher</string>
    <string name="action_about">A propos de...</string>
    <string name="details_title">Détails du véhicule</string>
    <string name="add_car_title">Ajout d\'un véhicule</string>
    <string name="details_marque">Marque : </string>
    <string name="details_modele">Modèle : </string>
    <string name="details_annee">Année : </string>
    <string name="details_km">Kilomètres : </string>
    <string name="details_immatriculation">Immatriculation : </string>
    <string name="details_prix">Prix :</string>
    <string name="details_unit">€</string>
    <string name="add_client_title">Nouveau client</string>
    <string name="details_state_loue">Loué</string>
    <string name="details_state_dispo">Disponible</string>
    <string name="details_button_retour">Retour Véhicule</string>
    <string name="details_button_location">Location</string>
    <string name="main_error_region">Vous devez sélectionner une région</string>
    <string name="main_error_agence">Vous devez sélectionner une agence</string>
    <string name="list_error_no_voiture">Il n\'y a pas de voiture pour cette agence</string>
    <string name="location_title">Location</string>
    <string name="location_client">Client</string>
    <string name="location_slash">/</string>
    <string name="location_client_nom">Nom :</string>
    <string name="location_client_prenom">Prénom :</string>
    <string name="location_voiture_marque">Marque :</string>
    <string name="location_voiture_modele">Modèle :</string>
    <string name="location_voiture_immat">Immatriculation :</string>
    <string name="location_voiture_annee">Année :</string>
    <string name="location_voiture_km">Kilomètres :</string>
    <string name="location_date">Date :</string>
    <string name="location_valider">Valider</string>
    <string name="add_client_assert_nom">Nom obligatoire</string>
    <string name="add_client_assert_prenom">Prénom obligatoire</string>
    <string name="add_client_assert_tel">Le téléphone est obligatoire</string>
    <string name="add_client_assert_mail">Le mail est obiligatoire</string>
    <string name="list_activity_error_not_car_loue">Il n\'y a pas de voitures louées</string>
    <string name="list_activity_error_car_not_dispo">Il n\'y a plus de véhicule disponible</string>
    <string name="activity_search_title">Recherche</string>
    <string name="home_app_name">Lokacar</string>
    <string name="search_placeholder_modele">Sélectionnez le modèle</string>
    <string name="search_placeholder_marque">Sélectionnez la marque</string>
    <string name="retour_telephone">Téléphone :</string>
    <string name="addcar_immat">Immatriculation</string>
    <string name="addcar_annee">Année</string>
    <string name="addcar_km">Kilomètres</string>
    <string name="addcar_prix">Prix</string>
    <string name="addcar_submit">Enregistrer</string>
    <string name="addcar_km_default">0</string>
    <string name="addcar_photo">Ajouter photo</string>
    <string name="photo_default">http://icons.iconarchive.com/icons/elegantthemes/beautiful-flat-one-color/128/car-icon.png</string>
    <string name="activity_search_where">ou</string>
    <string name="search_placeholder_categorie">Sélectionnez la catégorie</string>
    <string name="activity_search_price">prix</string>
    <string name="search_placeholder_price">Sélectionnez le prix</string>
    <string name="activity_search_validate">Valider</string>
    <string name="search_error_not_car">Il n\'y a pas de voitures qui correspondent à votre recherche</string>
    <string name="search_error_nothing_selected">Vous devez au moins renseigner une liste</string>
    <string name="activity_search_placeholder_price">Saissisez le prix</string>
    <string name="home">Accueil</string>
</resources>
