<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
        -->


    <item android:id="@+id/action_search" android:title="@string/action_search" app:showAsAction="always" android:icon="@android:drawable/ic_menu_search"/>
    <item android:id="@+id/action_about" android:title="@string/action_about" app:showAsAction="always" android:icon="@android:drawable/ic_menu_help"/>

    <item android:id="@+id/action_filter_loue" android:title="@string/filter_loues" app:showAsAction="never"/>
    <item android:id="@+id/action_filter_dispo" android:title="@string/filter_dispo" app:showAsAction="never"/>

</menu>