<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.eni.ecole.jbabinot.android.tp.lokacar.DetailsActivity"
    android:gravity="bottom">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/details_title"
                    android:layout_centerInParent="true"/>
                <TextView
                    android:id="@+id/textViewEtat"
                    style="@style/important_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    tools:text="Loué/Dispo"/>
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/imageViewVoiture"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            tools:src="@drawable/photo_restaurant"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>
        <LinearLayout
            style="@style/line_normal"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/details_marque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/field_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewMarque"
                tools:text="Ford"/>
        </LinearLayout>
        <LinearLayout
            style="@style/line_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/details_modele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/field_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewModele"
                tools:text="Fiesta"/>
        </LinearLayout>
        <LinearLayout
            style="@style/line_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/details_annee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/field_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAnnee"
                tools:text="2016"/>
        </LinearLayout>
        <LinearLayout
            style="@style/line_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/details_km"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/field_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewKm"
                tools:text="15512"/>
        </LinearLayout>
        <LinearLayout
            style="@style/line_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/details_immatriculation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/field_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewImmatriculation"
                tools:text="AA-854-BB"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonSubmit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        >
        <TextView
            style="@style/important_text"
            android:text="@string/details_prix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/important_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPrix"
            android:text="12000"/>
        <TextView
            style="@style/important_text"
            android:text="@string/details_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSubmit"
        tools:text="Retour/Location"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
